#ifndef SAMPLES_UNIFIED_ATTESTATION_INSTANCE_REE_APP_APP_H_
#define SAMPLES_UNIFIED_ATTESTATION_INSTANCE_REE_APP_APP_H_

#define ENCLAVE "sample-unified-attestation-instance-ree.signed.so"

#if defined(__cplusplus)
extern "C" {
#endif

#if defined(__cplusplus)
}
#endif

#endif  // SAMPLES_UNIFIED_ATTESTATION_INSTANCE_REE_APP_APP_H_
